force-app/main/default/objects/Foreclosure__c/Foreclosure__c.object-meta.xml
<CustomObject>
    <label>Foreclosure</label>
    <nameField>
        <label>Foreclosure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foreclosures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>