force-app/main/default/objects/Foreclosure__c/fields/Answer_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Answer_Due_Date__c</fullName>
    <label>Answer Due Date</label>
    <type>Date</type>
</CustomField>