force-app/main/default/objects/Foreclosure__c/fields/Attorney_Address__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Address__c</fullName>
    <label>Attorney Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>