force-app/main/default/objects/Foreclosure__c/fields/Attorney_City__c.field-meta.xml
<CustomField>
    <fullName>Attorney_City__c</fullName>
    <label>Attorney City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>