force-app/main/default/objects/Foreclosure__c/fields/Attorney_Name__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Name__c</fullName>
    <description>Name of the Attorney handling this Foreclosure</description>
    <label>Attorney Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>