force-app/main/default/objects/Foreclosure__c/fields/Attorney_State__c.field-meta.xml
<CustomField>
    <fullName>Attorney_State__c</fullName>
    <label>Attorney State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Code</valueSetName>
    </valueSet>
</CustomField>