force-app/main/default/objects/Foreclosure__c/fields/Attorney_Zip__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Zip__c</fullName>
    <label>Attorney Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>