force-app/main/default/objects/Foreclosure__c/fields/Days_in_Foreclosure__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Foreclosure__c</fullName>
    <formula>REO_Date__c -  DateValue(Special_Asset__r.CreatedDate)</formula>
    <label>Days in Foreclosure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>