force-app/main/default/objects/Foreclosure__c/fields/First_Legal_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Legal_Date__c</fullName>
    <label>First Legal Date</label>
    <type>Date</type>
</CustomField>