force-app/main/default/objects/Foreclosure__c/fields/Foreclosure_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Foreclosure_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Attorney Contact handling this Foreclosure</description>
    <label>Foreclosure Attorney</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Foreclosures</relationshipLabel>
    <relationshipName>Foreclosures</relationshipName>
    <type>Lookup</type>
</CustomField>