force-app/main/default/objects/Foreclosure__c/fields/Foreclosure_Status__c.field-meta.xml
<CustomField>
    <fullName>Foreclosure_Status__c</fullName>
    <description>Status of this Foreclosure</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Foreclosure</fullName>
            </value>
            <value>
                <fullName>Pre-Foreclosure</fullName>
                <default>true</default>
                <label>Pre-Foreclosure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>