force-app/main/default/objects/Foreclosure__c/fields/Foreclosure_Type__c.field-meta.xml
<CustomField>
    <fullName>Foreclosure_Type__c</fullName>
    <label>Foreclosure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Judicial</fullName>
            </value>
            <value>
                <fullName>Non-Judicial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>