force-app/main/default/objects/Foreclosure__c/fields/Judgement_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Entered_Date__c</fullName>
    <label>Judgement Entered Date</label>
    <type>Date</type>
</CustomField>