force-app/main/default/objects/Foreclosure__c/fields/Mediation_Pending__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Pending__c</fullName>
    <label>Mediation Pending</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>