force-app/main/default/objects/Foreclosure__c/fields/NOD_Date__c.field-meta.xml
<CustomField>
    <fullName>NOD_Date__c</fullName>
    <label>NOD Date</label>
    <type>Date</type>
</CustomField>