force-app/main/default/objects/Foreclosure__c/fields/Occupancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Status__c</fullName>
    <description>Occupancy Status of the Property at the time of this Foreclosure</description>
    <inlineHelpText>Occupancy Status of the Property at the time of this Foreclosure</inlineHelpText>
    <label>Occupancy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occupancy_Status</valueSetName>
    </valueSet>
</CustomField>