force-app/main/default/objects/Foreclosure__c/fields/Property_Condition__c.field-meta.xml
<CustomField>
    <fullName>Property_Condition__c</fullName>
    <description>Property Condition at the time of this Foreclosure</description>
    <inlineHelpText>Property Condition at the time of this Foreclosure</inlineHelpText>
    <label>Property Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>C5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>