force-app/main/default/objects/Foreclosure__c/fields/Receiver_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Assigned_Date__c</fullName>
    <label>Receiver Assigned Date</label>
    <type>Date</type>
</CustomField>