force-app/main/default/objects/Foreclosure__c/fields/Receiver_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Name__c</fullName>
    <label>Receiver Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>