force-app/main/default/objects/Foreclosure__c/fields/Receiver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Phone__c</fullName>
    <label>Receiver Phone</label>
    <type>Phone</type>
</CustomField>