force-app/main/default/objects/Foreclosure__c/fields/Redemption_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Redemption_End_Date__c</fullName>
    <label>Redemption End Date</label>
    <type>Date</type>
</CustomField>