force-app/main/default/objects/Foreclosure__c/fields/Referred_to_Attorney_Date__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Attorney_Date__c</fullName>
    <description>Date that this Foreclosure was referred to the Attorney</description>
    <label>Referred to Attorney Date</label>
    <type>Date</type>
</CustomField>