force-app/main/default/objects/Foreclosure__c/fields/Reschedule_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Sale_Date__c</fullName>
    <label>Reschedule Sale Date</label>
    <type>Date</type>
</CustomField>