force-app/main/default/objects/Foreclosure__c/fields/Taken_Off_Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>Taken_Off_Calendar_Date__c</fullName>
    <label>Taken Off Calendar Date</label>
    <type>Date</type>
</CustomField>