force-app/main/default/objects/Foreclosure__c/fields/Title_Clear_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Clear_Date__c</fullName>
    <label>Title Clear Date</label>
    <type>Date</type>
</CustomField>