force-app/main/default/objects/Foreclosure__c/fields/Title_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Ordered_Date__c</fullName>
    <label>Title Ordered Date</label>
    <type>Date</type>
</CustomField>