force-app/main/default/objects/Foreclosure__c/fields/Trustee_Assign_Date__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Assign_Date__c</fullName>
    <label>Trustee Assign Date</label>
    <type>Date</type>
</CustomField>