force-app/main/default/objects/Foreclosure__c/fields/X3rd_Party_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Sale_Date__c</fullName>
    <label>3rd Party Sale Date</label>
    <type>Date</type>
</CustomField>