force-app/main/default/objects/Foreclosure__c/recordTypes/Judicial_Foreclosure.recordType-meta.xml
<RecordType>
    <fullName>Judicial_Foreclosure</fullName>
    <active>true</active>
    <label>Judicial Foreclosure</label>
</RecordType>