force-app/main/default/objects/Foreclosure__c/recordTypes/Non_Judicial_Foreclosure.recordType-meta.xml
<RecordType>
    <fullName>Non_Judicial_Foreclosure</fullName>
    <active>true</active>
    <label>Non-Judicial Foreclosure</label>
</RecordType>