force-app/main/default/objects/Foreclosure__c/recordTypes/UCC_Foreclosure.recordType-meta.xml
<RecordType>
    <fullName>UCC_Foreclosure</fullName>
    <active>true</active>
    <label>UCC Foreclosure</label>
</RecordType>